--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "diffhtml": "^1.0.0-beta.9",
     "es6-object-assign": "^1.1.0",
     "humps": "^2.0.1",
+    "install": "^0.13.0",
     "uglifyjs": "^2.4.11",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2"
